[package]
name = "gas"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version="1", features = ["derive"]}
crossbeam = "0.8"
bincode={version="2", features = ["derive", "alloc"]}
clap={version="4", features=["derive"]}
rust-htslib = "0.49"
gskits = "0.15"
libc = "0.2"
io-uring = "0.7"

[dev-dependencies]
tempfile = "3"


# [target.'cfg(bin)'.dependencies]
